Fix team alignments resolves issue #46

--- a/css/styles.css
+++ b/css/styles.css
@@ -854,9 +854,31 @@ pre {
   .col-md-4 {
     flex: 0 0 33.3333333333%;
     max-width: 33.3333333333%; }
+
   .col-md-5 {
-    flex: 0 0 41.6666666667%;
-    max-width: 41.6666666667%; }
+    flex: 0 0 37.6666666667%;
+    max-width: 37.6666666667%; }
+
+    @media only screen and (max-width: 720px) {
+      .col-md-5 {
+        flex: 0 0 33.3333333333%;
+        max-width: 33.3333333333%; }
+    }  
+  
+    @media only screen and (max-width: 860px) {
+      .col-md-5 {
+        flex: 0 0 33.3333333333%;
+    max-width: 33.3333333333%;}
+    }
+  
+    @media only screen and (max-width: 960px) {
+      .col-md-5 {
+        flex: 0 0 33.3333333333%;
+        max-width: 33.3333333333%; 
+      }  
+
+    }
+
   .col-md-6 {
     flex: 0 0 50%;
     max-width: 50%; }
@@ -8654,9 +8676,9 @@ h3 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%; 
+    width: 70%; 
     padding: auto;
-    max-width: 50%;
+    max-width: 80%;
     height: auto; 
     align-items: center;
 }
@@ -8668,25 +8690,14 @@ h3 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%; 
-    padding: auto;
-    max-width: 50%;
-    height: auto; 
-    align-items: center;
-}
-}
-
-@media only screen and (max-width: 760px){
-  .team-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    width: 70%; 
     padding: auto;
     max-width: 80%;
     height: auto; 
     align-items: center;
 }
 }
+
 
 
 
@@ -8877,3 +8888,5 @@ h3 {
       #mainNav.navbar-shrink .navbar-brand {
         font-size: 1.5em; } }
  
+      
+      
